fixing responsive navbar

--- a/src/container/Layout/Layout.scss
+++ b/src/container/Layout/Layout.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 *{
-    font-family: Roboto, 'sans-serif';
+    font-family: Verdana, Geneva;
 }
 
 .default-wrapper {
