--- a/src/container/Layout/Layout.scss
+++ b/src/container/Layout/Layout.scss
@@ -182,17 +182,22 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url(https://www.gbiprj.org/img/ir-prj2.jpg);
-    position: relative;
     .overlay{
         background:rgba(0,0,0, 0.6) url(https://www.gbiprj.org/img/overlay.png) repeat scroll 0 100%;
         height: 300px;
+        display: grid;
         .container{
             color: #fff;
             padding: 60px 20px 60px 80px;
-            position: relative;
             z-index: 99;
-            display: inline-flex;
-            height: 300px;
+            display: grid;
+            grid-template-columns: 35% auto;
+            height: auto;
+            @media (min-width: 300px) and (max-width: 672px){
+                grid-template-columns: 100%;
+                grid-template-rows: auto;
+                padding: 10px;
+            }
             img{
                 animation: image_animation 5s infinite;
                 animation-timing-function: linear;
@@ -202,14 +207,32 @@
                 width: 200px;
                 max-width: 100%;
                 height: 336px;
+                @media (min-width: 300px) and (max-width: 672px){
+                    display: none;
+                }
             }
             .container-text-button{
+                display: grid;
+                grid-template-rows: repeat(2, auto);
+                .container-button{
+                    display: grid;
+                    grid-template-columns: repeat(2, auto);
+                    @media (min-width: 300px) and (max-width: 672px) {
+                        grid-template-columns: 100%;
+                        grid-template-rows: repeat(2, auto);
+                        // justify-items: center;
+                        align-items: center;
+                    }
+                }
                 .simple-word{
                     display: block;
                     // margin-top: -100px;
                     font-size: 17px;
                     font-weight: 300px;
                     text-align: right !important;
+                    @media (min-width: 300px) and (max-width: 672px) {
+                        text-align: center !important;
+                    }
                 }
                 .btn-custom{
                     border-radius: 30px;
@@ -219,6 +242,7 @@
                     text-align: center;
                     text-transform: uppercase;
                     min-width: 150px;
+                    max-height: 55px;
                     margin-right: 20px !important;
                     margin-top: 25px !important;
                     i{
@@ -228,6 +252,9 @@
                     &.link-email{
                         background: #fff;
                         color: #333;
+                        @media(min-width: 300px) and (max-width: 672px){
+                            margin-bottom: 20px !important;
+                        }
                     }
                     &.link-whatsapp{
                         color: #fff;
